--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/cloud/s3_vs_setup.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/cloud/s3_vs_setup.ipynb
@@ -4,6 +4,10 @@
    "metadata": {},
    "cell_type": "markdown",
    "source": [
+    "<div style=\"text-align: right;\">\n",
+    "  <img src=\"https://raw.githubusercontent.com/exasol/ai-lab/refs/heads/main/assets/Exasol_Logo_2025_Dark.svg\" style=\"width:200px; margin: 10px;\" />\n",
+    "</div>\n",
+    "\n",
     "# S3 Virtual Schema configuration\n",
     "\n",
     "[S3 Virtual Schema](https://github.com/exasol/s3-document-files-virtual-schema) is an Exasol extension that allows access\n",
