--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/data/data_abalone.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/data/data_abalone.ipynb
@@ -5,6 +5,10 @@
    "id": "30001487-61d5-46be-a662-83f406d8cc2a",
    "metadata": {},
    "source": [
+    "<div style=\"text-align: right;\">\n",
+    "  <img src=\"https://raw.githubusercontent.com/exasol/ai-lab/refs/heads/main/assets/Exasol_Logo_2025_Dark.svg\" style=\"width:200px; margin: 10px;\" />\n",
+    "</div>\n",
+    "\n",
     "# Abalone\n",
     "\n",
     "Here we will load data of physical measurements of abalones (sea snails). <a href=\"https://archive.ics.uci.edu/dataset/1/abalone\" target=\"_blank\" rel=\"noopener\">Follow this link</a> to get details about this dataset.\n",
