--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/data/data_content.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/data/data_content.ipynb
@@ -5,6 +5,10 @@
    "id": "620c1d78-830e-4bfd-8561-d3b6c78824bd",
    "metadata": {},
    "source": [
+    "<div style=\"text-align: right;\">\n",
+    "  <img src=\"https://raw.githubusercontent.com/exasol/ai-lab/refs/heads/main/assets/Exasol_Logo_2025_Dark.svg\" style=\"width:200px; margin: 10px;\" />\n",
+    "</div>\n",
+    "\n",
     "# List of available data to load\n",
     "\n",
     "1. [MAGIC Gamma Telescope](data_telescope.ipynb)\n",
