--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/data/data_customer_support.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/data/data_customer_support.ipynb
@@ -5,6 +5,10 @@
    "id": "738b2deeb6043fb5",
    "metadata": {},
    "source": [
+    "<div style=\"text-align: right;\">\n",
+    "  <img src=\"https://raw.githubusercontent.com/exasol/ai-lab/refs/heads/main/assets/Exasol_Logo_2025_Dark.svg\" style=\"width:200px; margin: 10px;\" />\n",
+    "</div>\n",
+    "\n",
     "# Customer Support Ticket Dataset\n",
     "\n",
     "Here we will load a dataset containing customer support tickets. We are using a modified version of the following [dataset](https://www.kaggle.com/datasets/suraj520/customer-support-ticket-dataset). \n",
