--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/ibis/quickstart.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/ibis/quickstart.ipynb
@@ -5,6 +5,10 @@
    "id": "aab6f747-2286-4d25-834d-195c742e5b62",
    "metadata": {},
    "source": [
+    "<div style=\"text-align: right;\">\n",
+    "  <img src=\"https://raw.githubusercontent.com/exasol/ai-lab/refs/heads/main/assets/Exasol_Logo_2025_Dark.svg\" style=\"width:200px; margin: 10px;\" />\n",
+    "</div>\n",
+    "\n",
     "# Working with Exasol using IBIS dataframe library.\n",
     "\n",
     "In this notebook, we will show some basic operations on Exasol data using Ibis. You can find more detailed information on using Ibis on the official [Ibis project](https://ibis-project.org/) website.\n",
