--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/sagemaker/sme_introduction.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/sagemaker/sme_introduction.ipynb
@@ -5,6 +5,10 @@
    "id": "3d4712f3-3f71-487a-a8a4-5765efbb4cc7",
    "metadata": {},
    "source": [
+    "<div style=\"text-align: right;\">\n",
+    "  <img src=\"https://raw.githubusercontent.com/exasol/ai-lab/refs/heads/main/assets/Exasol_Logo_2025_Dark.svg\" style=\"width:200px; margin: 10px;\" />\n",
+    "</div>\n",
+    "\n",
     "# Introduction\n",
     "\n",
     "The Exasol Sagemaker Extension allows the development of an end-to-end machine learning project on data stored in Exasol using the AWS SageMaker Autopilot service.\n",
