--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/script_languages_container/advanced.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/script_languages_container/advanced.ipynb
@@ -5,6 +5,10 @@
    "id": "660ae5cd-3a39-486e-8edd-8f5bd2d23c7a",
    "metadata": {},
    "source": [
+    "<div style=\"text-align: right;\">\n",
+    "  <img src=\"https://raw.githubusercontent.com/exasol/ai-lab/refs/heads/main/assets/Exasol_Logo_2025_Dark.svg\" style=\"width:200px; margin: 10px;\" />\n",
+    "</div>\n",
+    "\n",
     "# Advanced topics"
    ]
   },
