--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/script_languages_container/utils/file_system_ui.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/script_languages_container/utils/file_system_ui.ipynb
@@ -1,6 +1,16 @@
 {
  "cells": [
   {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "<div style=\"text-align: right;\">\n",
+    "  <img src=\"https://raw.githubusercontent.com/exasol/ai-lab/refs/heads/main/assets/Exasol_Logo_2025_Dark.svg\" style=\"width:200px; margin: 10px;\" />\n",
+    "</div>"
+   ],
+   "id": "a1ca77259315c64"
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "758126d0-4421-43da-b681-21ae4e37b571",
