--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/sklearn/sklearn_introduction.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/sklearn/sklearn_introduction.ipynb
@@ -5,6 +5,10 @@
    "id": "c7b3a9b5-1b5f-4613-bd8d-6c14f00af33e",
    "metadata": {},
    "source": [
+    "<div style=\"text-align: right;\">\n",
+    "  <img src=\"https://raw.githubusercontent.com/exasol/ai-lab/refs/heads/main/assets/Exasol_Logo_2025_Dark.svg\" style=\"width:200px; margin: 10px;\" />\n",
+    "</div>\n",
+    "\n",
     "# Introduction\n",
     "\n",
     "This set of notebooks demonstrates the use case of uploading an externally trained prediction model into Exasol database. In this particular scenario, a regression or classification model is trained using the [scikit-learn](https://scikit-learn.org/stable/) library. The trained scikiit_learn model is then uploaded into the [BucketFS](https://docs.exasol.com/db/latest/database_concepts/bucketfs/bucketfs.htm) and used for making predictions.\n",
