--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/start.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/start.ipynb
@@ -5,6 +5,10 @@
    "id": "b4445f60-e831-4e22-9b93-2ca56c1befcb",
    "metadata": {},
    "source": [
+    "<div style=\"text-align: right;\">\n",
+    "  <img src=\"https://raw.githubusercontent.com/exasol/ai-lab/refs/heads/main/assets/Exasol_Logo_2025_Dark.svg\" style=\"width:200px; margin: 10px;\" />\n",
+    "</div>\n",
+    "\n",
     "# Welcome to the Exasol AI-Lab\n",
     "\n",
     "## Introduction\n",
