--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/text_ai/txaie_analytics.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/text_ai/txaie_analytics.ipynb
@@ -5,6 +5,10 @@
    "id": "f0c96906-407d-4c43-bfeb-4ff38644e198",
    "metadata": {},
    "source": [
+    "<div style=\"text-align: right;\">\n",
+    "  <img src=\"https://raw.githubusercontent.com/exasol/ai-lab/refs/heads/main/assets/Exasol_Logo_2025_Dark.svg\" style=\"width:200px; margin: 10px;\" />\n",
+    "</div>\n",
+    "\n",
     "# Data Analysis with Text AI\n",
     "\n",
     "In this notebook, we will do some basic analysis on the semantic data extracted from the Customer Support Tickets.\n",
