--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/text_ai/txaie_init.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/text_ai/txaie_init.ipynb
@@ -5,6 +5,10 @@
    "id": "d89333d8-58be-4d52-a483-510b6fd30920",
    "metadata": {},
    "source": [
+    "<div style=\"text-align: right;\">\n",
+    "  <img src=\"https://raw.githubusercontent.com/exasol/ai-lab/refs/heads/main/assets/Exasol_Logo_2025_Dark.svg\" style=\"width:200px; margin: 10px;\" />\n",
+    "</div>\n",
+    "\n",
     "# Text AI Extension Initialization\n",
     "\n",
     "Here we will bring the Text AI functionality up and running. We will do this via a single call to function in the support library.\n",
