--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformers/te_introduction.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformers/te_introduction.ipynb
@@ -5,6 +5,10 @@
    "id": "6d15b185-49e1-489a-b8be-78d1ad3c67bc",
    "metadata": {},
    "source": [
+    "<div style=\"text-align: right;\">\n",
+    "  <img src=\"https://raw.githubusercontent.com/exasol/ai-lab/refs/heads/main/assets/Exasol_Logo_2025_Dark.svg\" style=\"width:200px; margin: 10px;\" />\n",
+    "</div>\n",
+    "\n",
     "# Introduction\n",
     "\n",
     "This set of notebooks demonstrates the functionality of the Exasol Transformer Extension. The extension allows the use of a pre-trained NLP model that can be found at the Huggingface Model Hub. It consists of a number of UDF and Lua scripts. The scripts can be uploaded into the database using a Python library.\n",
