--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/utils/generic_config_ui.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/utils/generic_config_ui.ipynb
@@ -5,6 +5,10 @@
    "id": "e7acaa8e-169c-47a5-8c3c-a0640247eed5",
    "metadata": {},
    "source": [
+    "<div style=\"text-align: right;\">\n",
+    "  <img src=\"https://raw.githubusercontent.com/exasol/ai-lab/refs/heads/main/assets/Exasol_Logo_2025_Dark.svg\" style=\"width:200px; margin: 10px;\" />\n",
+    "</div>\n",
+    "\n",
     "# Generic Configuration UI\n",
     "\n",
     "<b>This notebook is not supposed to be used on its own.<b>"
