--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/utils/jupysql_init.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/utils/jupysql_init.ipynb
@@ -5,6 +5,10 @@
    "id": "411db7e6-2fcc-428d-85c3-9e3b515aeaa7",
    "metadata": {},
    "source": [
+    "<div style=\"text-align: right;\">\n",
+    "  <img src=\"https://raw.githubusercontent.com/exasol/ai-lab/refs/heads/main/assets/Exasol_Logo_2025_Dark.svg\" style=\"width:200px; margin: 10px;\" />\n",
+    "</div>\n",
+    "\n",
     "# Initializing a JupySQL session\n",
     "\n",
     "<b>This notebook is not supposed to be run independently. It brings in the sql magic and performs some common DB initialization steps. The latter includes opening the default schema and activating UDF languages at the session level.</b>"
