--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/utils/main_config_ui.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/utils/main_config_ui.ipynb
@@ -5,6 +5,10 @@
    "id": "928e7d45-d3f8-4167-a8e6-7fe909da0249",
    "metadata": {},
    "source": [
+    "<div style=\"text-align: right;\">\n",
+    "  <img src=\"https://raw.githubusercontent.com/exasol/ai-lab/refs/heads/main/assets/Exasol_Logo_2025_Dark.svg\" style=\"width:200px; margin: 10px;\" />\n",
+    "</div>\n",
+    "\n",
     "# Main Configuration UI\n",
     "\n",
     "<b>This notebook is not supposed to be used on its own.<b>"
