--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/utils/popup_message_ui.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/utils/popup_message_ui.ipynb
@@ -5,6 +5,10 @@
    "id": "2bdaeea9-1807-40d3-8554-e2894f8ef985",
    "metadata": {},
    "source": [
+    "<div style=\"text-align: right;\">\n",
+    "  <img src=\"https://raw.githubusercontent.com/exasol/ai-lab/refs/heads/main/assets/Exasol_Logo_2025_Dark.svg\" style=\"width:200px; margin: 10px;\" />\n",
+    "</div>\n",
+    "\n",
     "# Popup message implementation\n",
     "\n",
     "<b>This notebook is not supposed to be used on its own.<b>"
