--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/utils/ui_styles.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/utils/ui_styles.ipynb
@@ -5,6 +5,10 @@
    "id": "c86561e6-5490-474a-9779-af0f65a97124",
    "metadata": {},
    "source": [
+    "<div style=\"text-align: right;\">\n",
+    "  <img src=\"https://raw.githubusercontent.com/exasol/ai-lab/refs/heads/main/assets/Exasol_Logo_2025_Dark.svg\" style=\"width:200px; margin: 10px;\" />\n",
+    "</div>\n",
+    "\n",
     "# UI Styles and Layouts\n",
     "\n",
     "<b>This notebook is not supposed to be used on its own.<b>\n",
