--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/main_config.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/main_config.ipynb
@@ -5,6 +5,10 @@
    "id": "f54817a6-4e92-4d65-ada7-797905b26efd",
    "metadata": {},
    "source": [
+    "<div style=\"text-align: right;\">\n",
+    "  <img src=\"https://raw.githubusercontent.com/exasol/ai-lab/refs/heads/main/assets/Exasol_Logo_2025_Dark.svg\" style=\"width:200px; margin: 10px;\" />\n",
+    "</div>\n",
+    "\n",
     "# Main Configuration\n",
     "\n",
     "This notebook may need to be visited first before we start with the examples. The notebook includes several steps outlined below. Under various conditions, some or all of these steps can be skipped.\n",
