--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/text_ai/txaie_introduction.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/text_ai/txaie_introduction.ipynb
@@ -5,6 +5,10 @@
    "id": "6d15b185-49e1-489a-b8be-78d1ad3c67bc",
    "metadata": {},
    "source": [
+    "<div style=\"text-align: right;\">\n",
+    "  <img src=\"https://raw.githubusercontent.com/exasol/ai-lab/refs/heads/main/assets/Exasol_Logo_2025_Dark.svg\" style=\"width:200px; margin: 10px;\" />\n",
+    "</div>\n",
+    "\n",
     "# Introduction\n",
     "\n",
     "This set of notebooks demonstrates the functionality of the Exasol Text AI. Text AI is a native Exasol solution that leverages AI to transform unstructured and semi-structured business data into relational data that can power analytics and drive insight.\n",
