--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/cloud/02_s3_vs_reuters.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/cloud/02_s3_vs_reuters.ipynb
@@ -240,7 +240,7 @@
    "id": "c583bab31ea654cf",
    "metadata": {},
    "source": [
-    "So, the query below can be used to obtain the most frequent topics for our dataset."
+    "So, the query below can be used to find the most frequent topics in our dataset."
    ]
   },
   {
