--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/cloud/02_s3_vs_reuters.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/cloud/02_s3_vs_reuters.ipynb
@@ -271,7 +271,7 @@
    "id": "8dd75dbbd2a7fd0b",
    "metadata": {},
    "source": [
-    "The tables `NEWS` and `NEWS_TOPICS` can also be joined on `NEWS_ID` column to find articles about a specific topic:"
+    "The tables `NEWS` and `NEWS_TOPICS` can also be joined on column `NEWS_ID` to find articles about a specific topic:"
    ]
   },
   {
