--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/gpu_in_udf/advanced_udf_with_gpu.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/gpu_in_udf/advanced_udf_with_gpu.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "## Advanced UDF with GPU\n",
     "\n",
-    "In this example, we will leverage the data provided in the S3 virtual schema tutorial to perform an in-depth analysis of news articles. The dataset that we will be working with is derived from the well-known Reuters 21578 collection—a comprehensive repository of documents containing a wide variety of news articles, each categorized according to its subject matter.\n",
+    "This perform an in-depth analysis of news articles using the data provided in the S3 virtual schema tutorial. The dataset that we will be working with, is derived from the well-known Reuters 21578 collection—a comprehensive repository of documents containing a wide variety of news articles, each categorized according to its subject matter.\n",
     "\n",
     "Our first step will be to create two distinct columns:\n",
     "1. **Topics:** This data will include a list of all unique topics present in the dataset, allowing us to systematically analyze the subject areas covered by the news articles.\n",
